--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "only",
+  "name": "Тестовая работа only (выполнил Ярмак В.Д)",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
